Calculator bug fixes
- Better error handling and ensures some errors clear the calculator display after error message pops up.

- Fixed clear history container by adding horizontal scrolling and fixing position of clear button.

- Fixed keyboard input and added feature for pasting into calculator display.

--- a/css/calculator_style.css
+++ b/css/calculator_style.css
@@ -31,7 +31,7 @@ body {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
-  overflow-x: auto;
+  overflow-x: scroll; /* Makes it scroll horizontally when the expression becomes to wide*/
   white-space: nowrap;
 }
 
@@ -85,7 +85,8 @@ button:hover {
   max-width: 300px;
   width: 100%;
   max-height: 300px;
-  overflow-y: auto;
+  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 .calculation-history h3 {
@@ -102,10 +103,7 @@ button:hover {
 }
 
 #clear-history {
-  margin-top: 10px;
-  position: sticky;
-  left: 220px;
-  bottom: 0;
+  margin-top: 20px;
   background-color: #e53935;
   color: #fff;
   transition: background-color 0.3s, transform 0.4s, box-shadow 0.3s;
@@ -117,7 +115,7 @@ button:hover {
 }
 
 #advanced_calc_button {
-  margin-top: 20px;
+  margin-top: 10px;
   font-size: 16px;
   padding: 10px 20px;
   background-color: #007bff;
